--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          const username=$("#email").val();
          const password=$("#password").val();
          if(username=="admin123@gmail.com" && password=="123456"){
-            window.location.href="/dashboard.html";
+            window.location.replace('/dashboard.html');
          }else{
             // M.toast({html: 'Sorry Username and Password Invalid'})
             Swal.fire({
