new changes again

--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
             <ul class="left">
               <li>
                 <h1 class="logo-wrapper">
-                  <a href="index.html" class="brand-logo darken-1">
+                  <a href="#l" class="brand-logo darken-1">
                     <!-- <img src="login/images/header-logo.png" alt="materialize logo"> -->
                     <span class="logo-text hide-on-med-and-down">P.N.I.C Admin</span>
                   </a>
